# datapyrse

./: .gitignore  README.md  __init__.py  core.py  pyproject.toml  requirements.txt  retrieve.py  sample.py  setup.py
core/: __init__.py
core/models/: column_set.py  entity.py  entity_collection.py  entity_reference.py  filter_expression.py  link_entity.py  query_expression.py
core/query/: __init__.py
core/services/: retrieve.py  retrieve_multiple.py  service_client.py
core/utils/: dataverse.py  query_to_fetch.py
datapyrse/: __init__.py  _entity.py  _entity_collection.py  _entity_metadata.py  _entity_reference.py  _entity_reference_collection.py  _service_client.py  service_client.pyi
datapyrse/core/: __init__.py
datapyrse/messages/: __init__.py  _associate.py  _create.py  _dataverse_request.py  _delete.py  _disassociate.py  _methods.py  _relate.py  _retrieve.py  _retrieve_multiple.py  _update.py
datapyrse/models/: column_set.py  condition_expression.py  entity.py  entity_collection.py  entity_metadata.py  filter_expression.py  link_entity.py  methods.py  order_expression.py  query_expression.py
models/: __init__.py  column_set.py  condition_expression.py  condition_operator.py  entity.py  entity_collection.py  entity_reference.py  filter_expression.py  filter_operator.py  link_entity.py  option_set.py  order_expression.py  query_expression.py
query/: __init__.py
services/: __init__.py  retrieve.py  retrieve_multiple.py  service_client.py
tests/: __init__.py
utils/: __init__.py  dataverse.py  query_to_fetch.py  validation.py
(+93 files in other folders)
